0-index: fix indent

--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
+  <title> Holberton AirBnB </title>
 </head>
-<header>
-	<header style="background:#FF0000;height:70px;width:100%;">
-</header>
+
 <body>
+  <header>
+    <header style="background: #FF0000; height: 70px; width: 100%;">
+    </header>
+    <footer>
+      <footer style="background: #00FF00; height: 60px; width: 100%; text-align: center; vertical-align: middle; bottom: 0; position: fixed">
+        <p>Holberton School</p>
+      </footer>
 </body>
-<footer>
-	<footer style="background:#00FF00;height:60px;width:100%;text-align:center;vertical-align:middle;bottom:0;position:fixed">
-	<p>Holberton School</p>
-</footer>
+
 </html>
