--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <title> Holberton AirBnB </title>
 </head>
-
 <body>
+<body style="margin: 0; padding: 0;">
   <header>
     <header style="background: #FF0000; height: 70px; width: 100%;">
     </header>
     <footer>
-      <footer style="background: #00FF00; height: 60px; width: 100%; text-align: center; vertical-align: middle; bottom: 0; position: fixed">
+      <footer style="background: #00FF00; height: 60px; width: 100%; line-height: 30px; text-align: center; vertical-align: middle; bottom: 0; position: fixed;">
         <p>Holberton School</p>
       </footer>
 </body>
-
 </html>
