--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<style>
-		header {background:#FF0000;height:70px;width:100%;}
-		footer {background:#00FF00;height:60px;width:100%;text-align:center;vertical-align:middle;bottom:0;position:fixed;}
+		body {margin: 0; padding: 0;}
+		header {background: #FF0000; height:70px;width:100%;}
+		footer {background:#00FF00;height:60px;width:100%;line-height: 30px; text-align:center;vertical-align:middle;bottom:0;position:fixed;}
 	</style>
 </head>
 <header>
