--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -8,8 +8,6 @@
 <body>
   <header>
   </header>
-  <footer>
-    <p>Holberton School</p>
-  </footer>
+  <footer>Holberton School</footer>
 </body>
 </html>
