Adding files for further review

--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -9,10 +9,8 @@
 </head>
 <body>
 <header>
-<div class="hbnblogo"></div>
+<div class="logo"></div>
 </header>
-<footer>
-<p>Holberton School</p>
-</footer>
+<footer>Holberton School</footer>
 </body>
 </html>
